Removing CouplingBetween Objects