@@ -1,8 +1,5 @@
-/**
- * BSD-style license; for more info see http://pmd.sourceforge.net/license.html
- */
 
-package net.sourceforge.pmd.renderers;
+ package net.sourceforge.pmd.renderers;
 
 import java.lang.reflect.Constructor;
 import java.lang.reflect.InvocationTargetException;
@@ -12,6 +9,8 @@ import java.util.Map;
 import java.util.Properties;
 import java.util.Set;
 import java.util.TreeMap;
+import java.util.function.Function;
+import java.util.stream.Collectors;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -19,91 +18,44 @@ import org.slf4j.LoggerFactory;
 import net.sourceforge.pmd.properties.PropertyDescriptor;
 import net.sourceforge.pmd.util.AssertionUtil;
 
-/**
- * This class handles the creation of Renderers.
- *
- * @see Renderer
- */
 public final class RendererFactory {
 
     private static final Logger LOG = LoggerFactory.getLogger(RendererFactory.class);
 
-    private static final Map<String, Class<? extends Renderer>> REPORT_FORMAT_TO_RENDERER;
+    private static final Map<String, Function<Properties, Renderer>> RENDERERS;
 
     static {
-        Map<String, Class<? extends Renderer>> map = new TreeMap<>();
-        map.put(CodeClimateRenderer.NAME, CodeClimateRenderer.class);
-        map.put(XMLRenderer.NAME, XMLRenderer.class);
-        map.put(IDEAJRenderer.NAME, IDEAJRenderer.class);
-        map.put(TextColorRenderer.NAME, TextColorRenderer.class);
-        map.put(TextRenderer.NAME, TextRenderer.class);
-        map.put(TextPadRenderer.NAME, TextPadRenderer.class);
-        map.put(EmacsRenderer.NAME, EmacsRenderer.class);
-        map.put(CSVRenderer.NAME, CSVRenderer.class);
-        map.put(HTMLRenderer.NAME, HTMLRenderer.class);
-        map.put(XSLTRenderer.NAME, XSLTRenderer.class);
-        map.put(YAHTMLRenderer.NAME, YAHTMLRenderer.class);
-        map.put(SummaryHTMLRenderer.NAME, SummaryHTMLRenderer.class);
-        map.put(VBHTMLRenderer.NAME, VBHTMLRenderer.class);
-        map.put(EmptyRenderer.NAME, EmptyRenderer.class);
-        map.put(JsonRenderer.NAME, JsonRenderer.class);
-        map.put(SarifRenderer.NAME, SarifRenderer.class);
-        REPORT_FORMAT_TO_RENDERER = Collections.unmodifiableMap(map);
+        RENDERERS = Map.of(
+            CodeClimateRenderer.NAME, CodeClimateRenderer::new,
+            XMLRenderer.NAME, XMLRenderer::new,
+            IDEAJRenderer.NAME, IDEAJRenderer::new,
+            TextColorRenderer.NAME, TextColorRenderer::new,
+            TextRenderer.NAME, TextRenderer::new,
+            TextPadRenderer.NAME, TextPadRenderer::new,
+            EmacsRenderer.NAME, EmacsRenderer::new,
+            CSVRenderer.NAME, CSVRenderer::new,
+            HTMLRenderer.NAME, HTMLRenderer::new,
+            XSLTRenderer.NAME, XSLTRenderer::new,
+            YAHTMLRenderer.NAME, YAHTMLRenderer::new,
+            SummaryHTMLRenderer.NAME, SummaryHTMLRenderer::new,
+            VBHTMLRenderer.NAME, VBHTMLRenderer::new,
+            EmptyRenderer.NAME, EmptyRenderer::new,
+            JsonRenderer.NAME, JsonRenderer::new,
+            SarifRenderer.NAME, SarifRenderer::new
+        );
     }
 
-    private RendererFactory() { }
+    private RendererFactory() {}
 
-    /**
-     * Retrieves a collection of all supported renderer names.
-     *
-     * @return The set of all supported renderer names.
-     */
     public static Set<String> supportedRenderers() {
-        return Collections.unmodifiableSet(REPORT_FORMAT_TO_RENDERER.keySet());
+        return Collections.unmodifiableSet(RENDERERS.keySet());
     }
 
-    /**
-     * Construct an instance of a Renderer based on report format name.
-     *
-     * @param reportFormat
-     *            The report format name.
-     * @param properties
-     *            Initialization properties for the corresponding Renderer.
-     * @return A Renderer instance.
-     */
     public static Renderer createRenderer(String reportFormat, Properties properties) {
         AssertionUtil.requireParamNotNull("reportFormat", reportFormat);
-        Class<? extends Renderer> rendererClass = getRendererClass(reportFormat);
-        Constructor<? extends Renderer> constructor = getRendererConstructor(rendererClass);
-
-        Renderer renderer;
-        try {
-            if (constructor.getParameterTypes().length > 0) {
-                LOG.warn(
-                        "The renderer uses a deprecated mechanism to use the properties. Please define the needed properties with this.definePropertyDescriptor(..).");
-                renderer = constructor.newInstance(properties);
-            } else {
-                renderer = constructor.newInstance();
-
-                for (PropertyDescriptor<?> prop : renderer.getPropertyDescriptors()) {
-                    String value = properties.getProperty(prop.name());
-                    if (value != null) {
-                        @SuppressWarnings("unchecked")
-                        PropertyDescriptor<Object> prop2 = (PropertyDescriptor<Object>) prop;
-                        Object valueFrom = prop2.valueFrom(value);
-                        renderer.setProperty(prop2, valueFrom);
-                    }
-                }
-            }
-        } catch (InstantiationException | IllegalAccessException e) {
-            throw new IllegalArgumentException(
-                    "Unable to construct report renderer class: " + e.getLocalizedMessage(), e);
-        } catch (InvocationTargetException e) {
-            throw new IllegalArgumentException(
-                    "Unable to construct report renderer class: " + e.getTargetException().getLocalizedMessage(), e);
-        }
-        // Warn about legacy report format usages
-        if (REPORT_FORMAT_TO_RENDERER.containsKey(reportFormat) && !reportFormat.equals(renderer.getName())) {
+        Function<Properties, Renderer> rendererConstructor = getRendererConstructor(reportFormat);
+        Renderer renderer = rendererConstructor.apply(properties);
+        if (RENDERERS.containsKey(reportFormat) && !reportFormat.equals(renderer.getName())) {
             LOG.warn("Report format '{}' is deprecated, and has been replaced with '{}'. "
                     + "Future versions of PMD will remove support for this deprecated Report format usage.",
                     reportFormat, renderer.getName());
@@ -111,56 +63,36 @@ public final class RendererFactory {
         return renderer;
     }
 
-    @SuppressWarnings("unchecked")
-    private static Class<? extends Renderer> getRendererClass(String reportFormat) {
+    private static Function<Properties, Renderer> getRendererConstructor(String reportFormat) {
         AssertionUtil.requireParamNotNull("reportFormat", reportFormat);
-        Class<? extends Renderer> rendererClass = REPORT_FORMAT_TO_RENDERER.get(reportFormat);
+        Function<Properties, Renderer> rendererConstructor = RENDERERS.get(reportFormat);
 
-        // Look up a custom renderer class
-        if (rendererClass == null && !"".equals(reportFormat)) {
+        if (rendererConstructor == null && !"".equals(reportFormat)) {
             try {
                 Class<?> clazz = Class.forName(reportFormat);
                 if (!Renderer.class.isAssignableFrom(clazz)) {
                     throw new IllegalArgumentException("Custom report renderer class does not implement the "
                             + Renderer.class.getName() + " interface.");
                 } else {
-                    rendererClass = (Class<? extends Renderer>) clazz;
+                    Constructor<?> ctor = clazz.getConstructor();
+                    ctor.setAccessible(true);
+                    rendererConstructor = properties -> {
+                        try {
+                            return (Renderer) ctor.newInstance();
+                        } catch (InstantiationException | IllegalAccessException | IllegalArgumentException
+                                | InvocationTargetException e) {
+                            throw new RuntimeException("Unable to instantiate Renderer", e);
+                        }
+                    };
                 }
             } catch (ClassNotFoundException e) {
                 throw new IllegalArgumentException("Can't find the custom format " + reportFormat + ": " + e);
+            } catch (NoSuchMethodException ignored) {
             }
         }
-        return rendererClass;
-    }
-
-    private static Constructor<? extends Renderer> getRendererConstructor(Class<? extends Renderer> rendererClass) {
-        Constructor<? extends Renderer> constructor = null;
-
-        // 1) Properties constructor? - deprecated
-        try {
-            constructor = rendererClass.getConstructor(Properties.class);
-            if (!Modifier.isPublic(constructor.getModifiers())) {
-                constructor = null;
-            }
-        } catch (NoSuchMethodException ignored) {
-            // Ignored, we'll check default constructor next
+        if (rendererConstructor == null) {
+            throw new IllegalArgumentException("Unknown renderer format " + reportFormat);
         }
-
-        // 2) No-arg constructor?
-        try {
-            constructor = rendererClass.getConstructor();
-            if (!Modifier.isPublic(constructor.getModifiers())) {
-                constructor = null;
-            }
-        } catch (NoSuchMethodException ignored) {
-            // Ignored, we'll eventually throw an exception, if there is no constructor
-        }
-
-        if (constructor == null) {
-            throw new IllegalArgumentException(
-                    "Unable to find either a public java.util.Properties or no-arg constructors for Renderer class: "
-                            + rendererClass.getName());
-        }
-        return constructor;
+        return rendererConstructor;
     }
 }
